# vibefort

./: .gitignore  README.md  SECURITY.md  THIRD_PARTY_NOTICES  pyproject.toml
.github/workflows/: publish.yml
docs/plans/: 2026-03-27-vibeguard-mvp.md
src/vibefort/: __init__.py  __main__.py  allowlist.py  autofix.py  banner.py  cli.py  clonescan.py  codescan.py  config.py  configguard.py  constants.py  db.py  depscan.py  display.py  dockerscan.py  envscan.py  installer.py  interceptor.py  oauth.py  pastescan.py  permguard.py  secrets.py  sysaudit.py
src/vibefort/ai/: __init__.py  anthropic.py  base.py  openai_provider.py
src/vibefort/assets/: top_npm_packages.txt  top_pypi_packages.txt
src/vibefort/scanner/: __init__.py  cve.py  tier1.py  tier2.py  tier3.py
tests/: conftest.py  test_ai_anthropic.py  test_ai_openai.py  test_allowlist.py  test_autofix.py  test_banner.py  test_cli.py  test_clonescan.py  test_codescan.py  test_commands.py  test_config.py  test_configguard.py  test_cve.py  test_db.py  test_depscan.py  test_display.py  test_dockerscan.py  test_envscan.py  test_installer.py  test_integration_new_features.py  test_interceptor.py  test_oauth.py  test_pastescan.py  test_permguard.py  test_secrets.py  test_sysaudit.py  test_tier1.py  test_tier2.py  test_tier3.py
