[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibefort"
version = "0.2.4"
description = "Security layer for AI-assisted development. One command, permanent protection."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Berk" }]
keywords = ["security", "supply-chain", "vibecoders", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "toml>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-httpx",
]

[project.scripts]
vibefort = "vibefort.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vibefort"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
